feat: add welcome screen

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -93,3 +93,12 @@ body {
   width: 3px !important;
   margin-left: 5px;
 }
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
